@@ -1,3 +1,8 @@
+2006-09-28	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, exo-helper/Makefile.am: Fix installation on Win32
+	  variants. Bug #2463.
+
 2006-09-14	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Fix double
